src/test/deca/codegen/invalid/no-objects/overflow_mult.res
Erreur : débordement pendant opération arithmétique entre deux flottants.
